removed single used schemas
