# ferelight/controllers/default_controller.py
@@ -9,9 +9,7 @@ from ferelight.models.multimediaobject import Multimediaobject  # noqa: E501
 from ferelight.models.multimediasegment import Multimediasegment  # noqa: E501
 from ferelight.models.objectinfos_post_request import ObjectinfosPostRequest  # noqa: E501
 from ferelight.models.query_post_request import QueryPostRequest  # noqa: E501
-from ferelight.models.querybyexample import Querybyexample  # noqa: E501
 from ferelight.models.scoredsegment import Scoredsegment  # noqa: E501
-from ferelight.models.segmentbytime import Segmentbytime  # noqa: E501
 from ferelight.models.segmentbytime_database_post200_response import SegmentbytimeDatabasePost200Response  # noqa: E501
 from ferelight.models.segmentinfos_post_request import SegmentinfosPostRequest  # noqa: E501
 from ferelight import util
@@ -221,8 +219,8 @@ def querybyexample_database_post(database, body):  # noqa: E501
 
     :param database: The name of the database to query.
     :type database: str
-    :param querybyexample:
-    :type querybyexample: dict | bytes
+    :param querybyexample_database_post_request:
+    :type querybyexample_database_post_request: dict | bytes
 
     :rtype: Union[List[Scoredsegment], Tuple[List[Scoredsegment], int], Tuple[List[Scoredsegment], int, Dict[str, str]]
     """
@@ -268,8 +266,8 @@ def segmentbytime_database_post(database, body):  # noqa: E501
 
     :param database: The name of the database to query.
     :type database: str
-    :param segmentbytime:
-    :type segmentbytime: dict | bytes
+    :param segmentbytime_database_post_request:
+    :type segmentbytime_database_post_request: dict | bytes
 
     :rtype: Union[SegmentbytimeDatabasePost200Response, Tuple[SegmentbytimeDatabasePost200Response, int], Tuple[SegmentbytimeDatabasePost200Response, int, Dict[str, str]]
     """
