# ferelight/models/querybyexample_database_post_request.py
@@ -1,0 +1,91 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from ferelight.models.base_model import Model
+from ferelight import util
+
+
+class QuerybyexampleDatabasePostRequest(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, segmentid=None, k=10):  # noqa: E501
+        """QuerybyexampleDatabasePostRequest - a model defined in OpenAPI
+
+        :param segmentid: The segmentid of this QuerybyexampleDatabasePostRequest.  # noqa: E501
+        :type segmentid: str
+        :param k: The k of this QuerybyexampleDatabasePostRequest.  # noqa: E501
+        :type k: int
+        """
+        self.openapi_types = {
+            'segmentid': str,
+            'k': int
+        }
+
+        self.attribute_map = {
+            'segmentid': 'segmentid',
+            'k': 'k'
+        }
+
+        self._segmentid = segmentid
+        self._k = k
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'QuerybyexampleDatabasePostRequest':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The _querybyexample__database__post_request of this QuerybyexampleDatabasePostRequest.  # noqa: E501
+        :rtype: QuerybyexampleDatabasePostRequest
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def segmentid(self) -> str:
+        """Gets the segmentid of this QuerybyexampleDatabasePostRequest.
+
+        The segment ID to find neighbors for.  # noqa: E501
+
+        :return: The segmentid of this QuerybyexampleDatabasePostRequest.
+        :rtype: str
+        """
+        return self._segmentid
+
+    @segmentid.setter
+    def segmentid(self, segmentid: str):
+        """Sets the segmentid of this QuerybyexampleDatabasePostRequest.
+
+        The segment ID to find neighbors for.  # noqa: E501
+
+        :param segmentid: The segmentid of this QuerybyexampleDatabasePostRequest.
+        :type segmentid: str
+        """
+
+        self._segmentid = segmentid
+
+    @property
+    def k(self) -> int:
+        """Gets the k of this QuerybyexampleDatabasePostRequest.
+
+        The number of neighbors to return.  # noqa: E501
+
+        :return: The k of this QuerybyexampleDatabasePostRequest.
+        :rtype: int
+        """
+        return self._k
+
+    @k.setter
+    def k(self, k: int):
+        """Sets the k of this QuerybyexampleDatabasePostRequest.
+
+        The number of neighbors to return.  # noqa: E501
+
+        :param k: The k of this QuerybyexampleDatabasePostRequest.
+        :type k: int
+        """
+
+        self._k = k
