# ferelight/models/segmentbytime_database_post_request.py
@@ -6,18 +6,18 @@ from ferelight.models.base_model import Model
 from ferelight import util
 
 
-class Segmentbytime(Model):
+class SegmentbytimeDatabasePostRequest(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, objectid=None, timestamp=None):  # noqa: E501
-        """Segmentbytime - a model defined in OpenAPI
+        """SegmentbytimeDatabasePostRequest - a model defined in OpenAPI
 
-        :param objectid: The objectid of this Segmentbytime.  # noqa: E501
+        :param objectid: The objectid of this SegmentbytimeDatabasePostRequest.  # noqa: E501
         :type objectid: str
-        :param timestamp: The timestamp of this Segmentbytime.  # noqa: E501
+        :param timestamp: The timestamp of this SegmentbytimeDatabasePostRequest.  # noqa: E501
         :type timestamp: float
         """
         self.openapi_types = {
@@ -34,62 +34,58 @@ class Segmentbytime(Model):
         self._timestamp = timestamp
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Segmentbytime':
+    def from_dict(cls, dikt) -> 'SegmentbytimeDatabasePostRequest':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The segmentbytime of this Segmentbytime.  # noqa: E501
-        :rtype: Segmentbytime
+        :return: The _segmentbytime__database__post_request of this SegmentbytimeDatabasePostRequest.  # noqa: E501
+        :rtype: SegmentbytimeDatabasePostRequest
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def objectid(self) -> str:
-        """Gets the objectid of this Segmentbytime.
+        """Gets the objectid of this SegmentbytimeDatabasePostRequest.
 
-        The unique identifier of the object.  # noqa: E501
+        The object ID to find the segment in.  # noqa: E501
 
-        :return: The objectid of this Segmentbytime.
+        :return: The objectid of this SegmentbytimeDatabasePostRequest.
         :rtype: str
         """
         return self._objectid
 
     @objectid.setter
     def objectid(self, objectid: str):
-        """Sets the objectid of this Segmentbytime.
+        """Sets the objectid of this SegmentbytimeDatabasePostRequest.
 
-        The unique identifier of the object.  # noqa: E501
+        The object ID to find the segment in.  # noqa: E501
 
-        :param objectid: The objectid of this Segmentbytime.
+        :param objectid: The objectid of this SegmentbytimeDatabasePostRequest.
         :type objectid: str
         """
-        if objectid is None:
-            raise ValueError("Invalid value for `objectid`, must not be `None`")  # noqa: E501
 
         self._objectid = objectid
 
     @property
     def timestamp(self) -> float:
-        """Gets the timestamp of this Segmentbytime.
+        """Gets the timestamp of this SegmentbytimeDatabasePostRequest.
 
-        Timestamp to locate in seconds.  # noqa: E501
+        The timestamp to match against.  # noqa: E501
 
-        :return: The timestamp of this Segmentbytime.
+        :return: The timestamp of this SegmentbytimeDatabasePostRequest.
         :rtype: float
         """
         return self._timestamp
 
     @timestamp.setter
     def timestamp(self, timestamp: float):
-        """Sets the timestamp of this Segmentbytime.
+        """Sets the timestamp of this SegmentbytimeDatabasePostRequest.
 
-        Timestamp to locate in seconds.  # noqa: E501
+        The timestamp to match against.  # noqa: E501
 
-        :param timestamp: The timestamp of this Segmentbytime.
+        :param timestamp: The timestamp of this SegmentbytimeDatabasePostRequest.
         :type timestamp: float
         """
-        if timestamp is None:
-            raise ValueError("Invalid value for `timestamp`, must not be `None`")  # noqa: E501
 
         self._timestamp = timestamp
